--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-form-hook",
-  "version": "1.1.2",
+  "version": "0.0.0-development",
   "description": "A lightweight form management library for Svelte, inspired by React Hook Form.",
   "type": "module",
   "keywords": [
@@ -28,22 +28,24 @@
     "copy:svelte": "cp -r src/components dist/ || xcopy /e /i src\\components dist\\components",
     "prepublishOnly": "npm run build",
     "test": "vitest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@sveltejs/package": "^2.5.4",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tsconfig/svelte": "^5.0.5",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
-    "eslint": "^9.36.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "eslint": "^9.37.0",
     "eslint-plugin-svelte": "^3.12.4",
-    "svelte": "^5.39.6",
+    "semantic-release": "^24.2.9",
+    "svelte": "^5.39.8",
     "svelte-check": "^4.3.2",
     "svelte-preprocess": "^6.0.3",
     "tslib": "^2.8.1",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.7",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9",
     "vitest": "^3.2.4",
     "zod": "^4.1.11"
   },
@@ -51,8 +53,12 @@
     "peer": "^1.0.2"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "svelte": "./dist/index.js",
