--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,25 +16,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Checkout the repo
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       # Set up Node
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js 24
+        uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
-          cache: "pnpm"
+          node-version: 24
 
       # Install pnpm globally
-      - name: Install pnpm
-        run: npm install -g pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 9
+          run_install: false
+          cache: false
 
       # Install dependencies using pnpm
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       # Build the project
       - name: Build
-        run: pnpm run build
+        run: pnpm build
 
       # Run semantic-release
       - name: Release
